--- a/composer.json
+++ b/composer.json
@@ -8,8 +8,12 @@
     ],
     "minimum-stability": "stable",
     "require": {
-        "guzzlehttp/guzzle": "^6.2",
-        "ql/uri-template": "^1.1"
+        "php": ">=5.4.0",
+        "ql/uri-template": "^1.1",
+        "psr/http-message": "~1.0"
+    },
+    "suggest": {
+        "guzzlehttp/guzzle": "if your want to use the build in GuzzleClientAdapter"
     },
     "autoload": {
         "psr-4": {
